<resources>
    <string name="app_name">Listener</string>

    // Menu
    <string name="menuFor">Form to add</string>

    // Login, Register
    <string name="txtUser">User</string>
    <string name="txtPassword">Password</string>
    <string name="btnSignIn">Sign in</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="btnRegister">Register</string>
    <string name="txtPasCon">Confirm</string>

    // HomeActivity
    <string name="txtHome">Listener</string>
    <string name="txtHomeImage">Turntable</string>
    <string name="btnHome">Go home</string>

    // ProductsActivity
    <string name="txtProTitle">Products</string>
    <string name="txtPro1">Apple AirPods Max</string>
    <string name="txtPro2">Bose Noise Cancelling Headphones 700</string>
    <string name="txtPro3">Soundcore Life Q30</string>
    <string name="btnPro1">Details</string>
    <string name="btnPro2">Details</string>
    <string name="btnPro3">Details</string>
    <string name="txtPriPro1">$500</string>
    <string name="txtPriPro2">$350</string>
    <string name="txtPriPro3">$100</string>
    <string name="btnProTem">Details</string>

    // ProductDetailsActivity
    <string name="txtNamPro"> </string>
    <string name="txtDetPro"> </string>
    <string name="txtPriPro"> </string>
    <string name="txtDesPro"> </string>
    <string name="btnDetPro">Go back</string>

    // ProductFormActivity
    <string name="txtFor">Form</string>
    <string name="btnGet">Get</string>
    <string name="btnDel">Delete</string>
    <string name="btnUpd">Update</string>
    <string name="txtNamFor">Name</string>
    <string name="txtDesFor">Description</string>
    <string name="txtPriFor">Price</string>
    <string name="btnAdd">Add</string>


</resources>