<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/metal_background"
    tools:context=".ProductForm">

    <TextView
        android:id="@+id/txtFor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtFor"
        android:gravity="center"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTxtId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:inputType="textPersonName"
                android:text="" />

            <Button
                android:id="@+id/btnGet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnGet" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnUpd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnUpd" />

            <Button
                android:id="@+id/bntDel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnDel"
                android:textColorHighlight="#F44336" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgAddFor"
                android:layout_width="200sp"
                android:layout_height="200sp"
                app:srcCompat="@drawable/add_photo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtNamFor"
                    android:layout_width="10sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txtNamFor" />

                <EditText
                    android:id="@+id/editTxtNamFor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtDesFor"
                    android:layout_width="10sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txtDesFor" />

                <EditText
                    android:id="@+id/editTxtDesFor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtPriFor"
                    android:layout_width="10sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txtPriFor" />

                <EditText
                    android:id="@+id/editTxtPriFor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="" />
            </LinearLayout>

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/btnAdd" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>