<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/metal_background"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="250sp"
            android:layout_height="250sp"
            app:srcCompat="@drawable/ecualizer"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtUse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:text="@string/txtUser"
                android:textAlignment="textEnd"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTxtUse"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="15"
                android:inputType="textEmailAddress"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtPas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:text="@string/txtPassword"
                android:textAlignment="textEnd"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTxtPas"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="15"
                android:inputType="textPassword"
                android:text="" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSignIn" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSignUp" />

    </LinearLayout>
</LinearLayout>