<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/metal_background"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="250sp"
            android:layout_height="250sp"
            tools:src="@tools:sample/avatars"
            app:srcCompat="@drawable/listener"/>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtUseReg"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:textSize="18sp"
                android:textAlignment="textEnd"
                android:text="@string/txtUser" />

            <EditText
                android:id="@+id/editTxtUseReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="15"
                android:inputType="textEmailAddress"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtPasReg"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:textSize="18sp"
                android:textAlignment="textEnd"
                android:text="@string/txtPassword" />

            <EditText
                android:id="@+id/editTxtPasReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="15"
                android:inputType="textPassword"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtPasCon"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:textSize="18sp"
                android:textAlignment="textEnd"
                android:text="@string/txtPasCon" />

            <EditText
                android:id="@+id/editTxtPasCon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="15"
                android:inputType="textPassword"
                android:text="" />
        </LinearLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnRegister" />

    </LinearLayout>
</LinearLayout>